objects/HealthCloudGA__EHRProcedure__c.object
<CustomObject>
    <description>An action that is or was performed on a patient. This can be a physical intervention like an operation, or less invasive like counseling or hypnother.`</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the person the procedure was performed on.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EHR Procedures</relationshipLabel>
        <relationshipName>EHRProcedures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BodySite__c</fullName>
        <description>Anatomical location for the procedure.</description>
        <label>Body Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <description>High-level categorization of the procedure.</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CodeLabel__c</fullName>
        <description>Name of the procedure.</description>
        <label>Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Code__c</fullName>
        <description>Industry standard code for the procedure.</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Complication__c</fullName>
        <description>Code that identifies any resulting complications.</description>
        <label>Complication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Encounter associated with the procedure</description>
        <label>Encounter</label>
        <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
        <relationshipLabel>EHR Procedures</relationshipLabel>
        <relationshipName>EHRProcedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FollowUpInstructions__c</fullName>
        <description>Instructions for follow up care</description>
        <label>Follow Up Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ItemsUsed__c</fullName>
        <description>Items used during the procedure</description>
        <label>Items Used</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Location__c</fullName>
        <description>Physical location where the procedure was performed.</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NotPerformed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the procedure was not performed as scheduled (true).</description>
        <label>Not Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Notes__c</fullName>
        <description>Additional information about the procedure</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Outcome__c</fullName>
        <description>Result of the procedure.</description>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PerformedDateTime__c</fullName>
        <description>Date and time the procedure was performed.</description>
        <label>Performed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reason1__c</fullName>
        <description>Reason the procedure was performed.</description>
        <label>Reason 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reason2__c</fullName>
        <description>Reason the procedure was performed.</description>
        <label>Reason 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reason3__c</fullName>
        <description>Reason the procedure was performed.</description>
        <label>Reason 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonNotPerformed__c</fullName>
        <description>Reason procedure was not performed.</description>
        <label>Reason Not Performed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Report__c</fullName>
        <description>Name of the report related to the procedure</description>
        <label>Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the request for the procedure</description>
        <label>Request</label>
        <referenceTo>HealthCloudGA__EHRProcedureRequest__c</referenceTo>
        <relationshipLabel>EHR Procedures</relationshipLabel>
        <relationshipName>EHR_Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemID__c</fullName>
        <description>Record ID from a system outside of Salesforce.</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Status__c</fullName>
        <description>Status of the procedure.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Entered in Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EHR Procedure</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Proc-{0}</displayFormat>
        <label>EHR Procedure ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Procedures</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>